--- a/index.html
+++ b/index.html
@@ -4,24 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Tweet LocalStorage</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/skeleton.css">
     <link rel="stylesheet" href="css/custom.css">
 </head>
 <body>
-
     <div id="contenido">
         <div class="container">
-
             <h1>Local Storage</h1>
             <div class="row">
                 <div class="six columns">
                     <label for="tweet">Tweet:</label>
                     <form  id="formulario">
-                            <label for="tweet"></label>
-                            <textarea id="tweet" class="u-full-width"></textarea>
-                            <input type="submit" class="button u-full-width button-primary" value="Agregar">
+                        <label for="tweet"></label>
+                        <textarea id="tweet" class="u-full-width"></textarea>
+                        <input type="submit" class="button u-full-width button-primary" value="Agregar">
                     </form>
                 </div>
                 <div class="six columns">
@@ -29,9 +27,8 @@
                     <div id="lista-tweets"></div>
                 </div>
             </div>
-
         </div>
-    </div> <!--#contenido-->
+    </div>
 
     <script src="js/app.js"></script>
 </body>
